--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Baby Got Bourbon</h1>
-<h2>Bourbon Chase 2018</h2>
+<body>
+
+    <div class="bg"></div>
+
+    <br />
+    <div class="col-10 offset-1">
+      <div class="row text-center">
+        <div class="col-12 col-sm">
+          <div class="booyah-box">
+            <br />
+            <h1>Van #1</h1>
+            <br />
+            <ul class="list-group">
+              <li class="list-group-item">Runner 1</li>
+              <li class="list-group-item">Runner 2</li>
+              <li class="list-group-item">Runner 3</li>
+              <li class="list-group-item">Runner 4</li>
+              <li class="list-group-item">Runner 5</li>
+              <li class="list-group-item">Runner 6</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm">
+          <div class="booyah-box">
+            <br />
+            <h1>Van #2</h1>
+            <br />
+            <ul class="list-group">
+              <li class="list-group-item">Runner 7</li>
+              <li class="list-group-item">Runner 8</li>
+              <li class="list-group-item">Runner 9</li>
+              <li class="list-group-item">Runner 10</li>
+              <li class="list-group-item">Runner 11</li>
+              <li class="list-group-item">Runner 12</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</body>
