--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,19 +5,60 @@
     <br />
     <div class="col-10 offset-1">
       <div class="row text-center">
+        
         <div class="col-12 col-sm">
           <div class="booyah-box">
             <br />
-            <h1>Van #1</h1>
+            <h1>Van #2</h1>
             <br />
-            <ul class="list-group">
-              <li class="list-group-item">Runner 1</li>
-              <li class="list-group-item">Runner 2</li>
-              <li class="list-group-item">Runner 3</li>
-              <li class="list-group-item">Runner 4</li>
-              <li class="list-group-item">Runner 5</li>
-              <li class="list-group-item">Runner 6</li>
-            </ul>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 1</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 2</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 3</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 4</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 5</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 6</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
           </div>
         </div>
 
@@ -26,16 +67,57 @@
             <br />
             <h1>Van #2</h1>
             <br />
-            <ul class="list-group">
-              <li class="list-group-item">Runner 7</li>
-              <li class="list-group-item">Runner 8</li>
-              <li class="list-group-item">Runner 9</li>
-              <li class="list-group-item">Runner 10</li>
-              <li class="list-group-item">Runner 11</li>
-              <li class="list-group-item">Runner 12</li>
-            </ul>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 7</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 8</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 9</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 10</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 11</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
+            <div class="booyah-box">
+              <br />
+              <h3>Runner 12</h3>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 1</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 2</label>
+              <label class="checkbox-inline"><input type="checkbox" value="">Leg 3</label>
+              <br /><br />
+            </div>
           </div>
         </div>
+
       </div>
     </div>
 
