--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,8 @@
           <div class="booyah-box">
             <br />
             <h1 class="text-center">Countdown to The Bourbon Chase 2018</h1>
-            <p class="text-center" id="demo"></p>
+            <h1 class="text-center" id="demo"></h1>
+            <br />
             <script>
             // Set the date we're counting down to
             var countDownDate = new Date("Oct 12, 2018 7:00:00").getTime();
@@ -39,7 +40,20 @@
                     document.getElementById("demo").innerHTML = "EXPIRED";
                 }
             }, 1000);
+            
+
+            
+            $(function(){
+                var test = localStorage.input === 'true'? true: false;
+                $('input').prop('checked', test || false);
+            });
+
+            $('input').on('change', function() {
+                localStorage.input = $(this).is(':checked');
+                console.log($(this).is(':checked'));
+            });
             </script>
+
           </div>
         </div>
         <br /><br />
