--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,7 +13,7 @@
             <br />
             <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("Oct 12, 2018 7:00:00").getTime();
+            var countDownDate = new Date("Oct 12, 2018 10:45:00").getTime();
 
             // Update the count down every 1 second
             var x = setInterval(function() {
@@ -79,7 +79,7 @@
             </div>
             <div class="booyah-box">
               <br />
-              <h3>Jaci</h3>
+              <h3>Open</h3>
               <hr />
               <div class="row">
                 <div class="col-sm-4"><input type="checkbox" value="">Leg 2</div>
