--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -51,7 +51,6 @@
 </script>
 
 
-
 </body>
 </html>
 
@@ -122,7 +121,7 @@
               <h3>Carrie</h3>
               <hr />
               <div class="row">
-                <div class="col-sm-4"><input type="checkbox" class="save-cb-state" name="mycheckbox1" value="yes"> Leg 1</div>
+                <div class="col-sm-4"><input type="checkbox" name="checkboxes[]"> Leg 1</div>
                 <div class="col-sm-4"><input type="checkbox" class="save-cb-state" name="mycheckbox13" value="yes"> Leg 13</div>
                 <div class="col-sm-4"><input type="checkbox" class="save-cb-state" name="mycheckbox25" value="yes"> Leg 25</div>
               </div>
@@ -140,7 +139,7 @@
             </div>
             <div class="booyah-box">
               <br />
-              <h3>Open</h3>
+              <h3>Brandon</h3>
               <hr />
               <div class="row">
                 <div class="col-sm-4"><input type="checkbox" class="save-cb-state" name="mycheckbox2" value="yes"> Leg 2</div>
@@ -203,7 +202,7 @@
             </div>
             <div class="booyah-box">
               <br />
-              <h3>Brandon</h3>
+              <h3>Joe</h3>
               <hr />
               <div class="row">
                 <div class="col-sm-4"><input type="checkbox" class="save-cb-state" name="mycheckbox5" value="yes"> Leg 5</div>
